[project]
name = "finalproject_kunin_artem_m25-255"
version = "0.1.0"
description = "Платформа для отслеживания и симуляции торговли валютами"
authors = [
    {name = "KZAKNES", email = "ghost.gamer675@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "prettytable>=3.0.0,<4.0.0",
    "requests>=2.28.0,<3.0.0",
    "schedule>=1.2.0,<2.0.0"
]

[tool.poetry.scripts]
valutatrade = "valutatrade_hub.cli.interface:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "C"]

[tool.poetry]
packages = [
    { include = "valutatrade_hub" }
]
